# pcl_smooth_normal

./: CMakeLists.txt  README
include/bimlib/: point_types.h
include/bimlib/segmentation/: Segmentation.h  SmoothNormal.h
include/bimlib/segmentation/impl/: Segmentation.hpp  SmoothNormal.hpp
src/: SmoothNormal.cpp  segmentation.cpp  segmentation_tester.cpp
